Raffles & Club Update

--- a/index.html
+++ b/index.html
@@ -190,6 +190,21 @@
 							<p class="player-info">IspodRadara <br> <span>Level 52</span></p>
 							<p class="player-trophies">166</p>
 						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-2.png">
+							<p class="player-info">Matrix Podin <br> <span>Level 33</span></p>
+							<p class="player-trophies">679</p>
+						</div><!-- end player-tile -->
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-3.png">
+							<p class="player-info">GO CK FOSU <br> <span>Level 48</span></p>
+							<p class="player-trophies">448</p>
+						</div><!-- end player-tile -->						
+						<div class="player-tile">
+							<img src="public/images/avatars/avatar-2.png">
+							<p class="player-info">Matrix Podin <br> <span>Level 33</span></p>
+							<p class="player-trophies">679</p>
+						</div><!-- end player-tile -->
 					</div><!-- end champions-box -->
 				</div><!-- end season-champions -->
 				<div class="season-champions other-clubs">
@@ -247,12 +262,94 @@
 							<button class="main-button" type="button">CRUSH IT</button>
 						</div><!-- end leader-box -->
 					</div><!-- end champions-box -->
-				</div><!-- end season-champions -->
+					<div class="my-season-stats">
+						<p class="comp-title">Crush Other Clubs</p>
+						<div class="stats-wrapper">
+							<div class="stats-box">
+								<div class="stats-left">
+									<div class="stats-top">
+										<img src="public/images/icons/season-rank.png">
+										<p>Season Rank</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>#1432</p>
+									</div><!-- end stats-bottom -->
+								</div><!-- end stats-left -->
+								<div class="stats-right">
+									<div class="stats-top">
+										<img src="public/images/icons/champion.png">
+										<p>Trophies Earned</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>14,631</p>
+									</div><!-- end stats-bottom -->				
+								</div><!-- end stats-right -->
+							</div><!-- end stats-box -->
+							<div class="stats-box stats-box-no-mar">
+								<div class="stats-left">
+									<div class="stats-top">
+										<img src="public/images/icons/ends.png">
+										<p>Total Kills</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>13,251</p>
+									</div><!-- end stats-bottom -->
+								</div><!-- end stats-left -->
+								<div class="stats-right">
+									<div class="stats-top">
+										<img src="public/images/icons/assist.png">
+										<p>Total Assits</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>3,456</p>
+									</div><!-- end stats-bottom -->				
+								</div><!-- end stats-right -->
+							</div><!-- end stats-box -->
+							<div class="stats-box stats-box-no-mar">
+								<div class="stats-left">
+									<div class="stats-top">
+										<img src="public/images/icons/cs.png">
+										<p>Total CS</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>27,099</p>
+									</div><!-- end stats-bottom -->
+								</div><!-- end stats-left -->
+								<div class="stats-right">
+									<div class="stats-top">
+										<img src="public/images/icons/goal.png">
+										<p>Challanges</p>
+									</div><!-- end stats-top -->
+									<div class="stats-bottom">
+										<p>12</p>
+									</div><!-- end stats-bottom -->				
+								</div><!-- end stats-right -->
+							</div><!-- end stats-box -->																
+						</div><!-- end stats-wrapper -->
+					</div><!-- end my-season-stats -->
+				</div><!-- end season-champions -->									
 				<div class="season-champions other-clubs">
 					<p class="comp-title">This ad supports Fantasy Ninjas club!</p>
 					<div class="champions-box ads">
 						<iframe width="390" height="270" class="yt-box" src="https://www.youtube.com/embed/EH0K1o_6hTM?controls=0&autoplay=1&loop=1&mute=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div><!-- end champions-box -->
+					<div class="club-activity">
+						<p class="comp-title">Club’s Season Action</p>
+						<div class="challange-box">
+							<div class="challange-box-col-1">
+								<img src="public/images/icons/chal-4.png">
+							</div><!-- end challange-box-col-1 -->
+							<div class="challange-box-col-2">
+								<p class="chal-box-title">Club Kills:</p>
+								<p class="chal-box-num">138,215</p>
+							</div><!-- end challange-box-col-2 -->
+						</div><!-- end challange-box -->
+						<div class="top-player">
+							<img src="public/images/avatars/avatar-2.png">
+							<p class="top-player-def">RenektonTopOnly <br><span>MVP <span>MOST KILLS</span></span></p>
+							<p class="top-player-score">455</p>
+						</div><!-- end top-player -->
+					</div><!-- end club-activity -->
 				</div><!-- end season-champions -->
 			</div><!-- end content-wrapper -->
 		</div><!-- end main-view -->
